gitflow-feature-stash: documentation
